<resources>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="transparent">#00FFFFFF</color>
    <color name="purple_text">#6C5DD3</color>
    <color name="user_center_item_color_select">#4D4D4D</color>
    <color name="focus_input_color">#575757</color>
    <color name="normal_button_color">#47969696</color>
    <color name="background_start_color">#402E6A</color>
    <color name="background_end_color">#232148</color>
    <color name="user_collect_background_start_color">#4DE3E3E4</color>
    <color name="user_collect_background_end_color">#4D747579</color>
    <color name="mine_msg_notify_tv_focus_color">#6541C5</color>
    <string name="account_login_input1_hint">请输入手机号/账号</string>
    <string name="message_login_input1_hint">请输入手机号</string>
    <string name="account_login_input2_hint">请输入密码</string>
    <string name="message_login_input2_hint">请输入验证码</string>
    <string name="toast_accept_treaty">请阅读并同意《用户协议》和《隐私政策》</string>

    <string name="all">全部</string>
    <string name="user_info_modify_info_hint_1">用手机扫一扫可修改公司信息，暂不支持更换手机号；</string>
    <string name="user_info_modify_info_hint_2">如需更换账号，请联系：{}进行申请</string>
    <string name="user_info_support_contact">support@zeewain.com</string>
    <string name="user_back">返回</string>
    <string name="user_info_description">*说明：点击 [修改资料] 修改个人信息，按 [保存] 完成并完成修改</string>
    <string name="user_info_name">用户昵称：</string>
    <string name="user_info_company_name">公司名称：</string>
    <string name="user_info_company_address">公司地址：</string>
    <string name="user_info_tel">联系电话：</string>
    <string name="user_info_qr">专属推荐码：</string>
    <string name="user_info_modify_data">修改资料</string>
</resources>